# hltv-api

./: pyproject.toml
src/hltv_api/app/: __init__.py
src/hltv_api/scrapper/: Teams.py  main.py  results.py  teams.py
tests/: conftest.py
tests/pages/: results.html
tests/scrapper/: test_results.py
